--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "react",
     "react-hooks",
     "jsx-a11y",
-    "import"
+    "import",
+    "prettier"
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
@@ -46,7 +47,8 @@
         "specialLink": ["hrefLeft", "hrefRight"],
         "aspects": ["invalidHref", "preferButton"]
       }
-    ]
+    ],
+    "prettier/prettier": "error"
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
