--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "14.2.28",
@@ -19,6 +20,9 @@
     "@types/react-dom": "18.2.22",
     "typescript": "5.4.3",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.28"
+    "eslint-config-next": "14.2.28",
+    "prettier": "3.2.5",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3"
   }
 }
