--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "next": "14.2.28",
+    "pino": "9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,11 +20,11 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
-    "typescript": "5.4.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.28",
-    "prettier": "3.2.5",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3"
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.2.5",
+    "typescript": "5.4.3"
   }
 }
