--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run"
   },
   "dependencies": {
     "next": "14.2.28",
@@ -27,6 +30,7 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
+    "cypress": "14.3.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
@@ -34,6 +38,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.2.5",
+    "start-server-and-test": "2.0.11",
     "ts-jest": "29.3.2",
     "typescript": "5.4.3"
   }
