--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write .",
-    "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "14.2.28",
@@ -23,23 +16,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "29.5.14",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
-    "cypress": "14.3.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "prettier": "3.2.5",
-    "start-server-and-test": "2.0.11",
-    "ts-jest": "29.3.2",
     "typescript": "5.4.3"
   }
 }
