--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.21",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "postcss": "8.5.3",
     "prettier": "3.2.5",
+    "tailwindcss": "4.1.5",
     "typescript": "5.4.3"
   }
 }
