--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.21",
+    "critters": "0.0.23",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
