--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "next": "14.2.28",
@@ -17,6 +18,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.5",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@types/jest": "29.5.14",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
@@ -26,9 +30,12 @@
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "postcss": "8.5.3",
     "prettier": "3.2.5",
     "tailwindcss": "4.1.5",
+    "ts-jest": "29.3.2",
     "typescript": "5.4.3"
   }
 }
