--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "test": "jest"
+    "test": "jest",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run"
   },
   "dependencies": {
     "next": "14.2.28",
@@ -26,6 +29,7 @@
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.21",
     "critters": "0.0.23",
+    "cypress": "14.3.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
@@ -34,6 +38,7 @@
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.5.3",
     "prettier": "3.2.5",
+    "start-server-and-test": "2.0.11",
     "tailwindcss": "4.1.5",
     "ts-jest": "29.3.2",
     "typescript": "5.4.3"
