--- a/package.json
+++ b/package.json
@@ -7,19 +7,42 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "jest --coverage",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run"
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run",
+    "test:component": "cypress run --component",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "2.2.0",
+    "@hookform/resolvers": "5.0.1",
+    "@prisma/client": "6.7.0",
+    "@radix-ui/react-slot": "1.2.2",
+    "@sentry/nextjs": "9.17.0",
+    "@types/bcryptjs": "2.4.6",
+    "bcryptjs": "3.0.2",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "jose": "6.0.11",
     "next": "14.2.28",
     "pino": "^8.17.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
+    "react-dom": "18.2.0",
+    "react-dropzone": "14.3.8",
+    "react-hook-form": "7.56.3",
+    "sonner": "2.0.3",
+    "tailwind-merge": "3.2.0",
+    "zod": "3.24.4"
   },
   "devDependencies": {
+    "@cypress/react": "9.0.1",
+    "@cypress/vite-dev-server": "6.0.3",
     "@tailwindcss/postcss": "4.1.5",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -34,10 +57,13 @@
     "eslint-config-next": "14.2.28",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "husky": "9.1.7",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "lint-staged": "16.0.0",
     "postcss": "8.5.3",
     "prettier": "3.2.5",
+    "prisma": "6.7.0",
     "start-server-and-test": "2.0.11",
     "tailwindcss": "4.1.5",
     "ts-jest": "29.3.2",
