--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "react-dom": "18.2.0",
     "react-dropzone": "14.3.8",
     "react-hook-form": "7.56.3",
+    "react-hot-toast": "2.5.2",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "zod": "3.24.4"
   },
   "devDependencies": {
+    "@cypress/mount-utils": "4.1.2",
     "@cypress/react": "9.0.1",
     "@cypress/vite-dev-server": "6.0.3",
     "@tailwindcss/postcss": "4.1.5",
