Menu Painel ADM

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,11 @@ jobs:
   test-and-build:
     runs-on: ubuntu-latest
     env:
-      DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/toutspecial?schema=toutspecial"
-      NEXTAUTH_SECRET: "test-secret-key"
-      NEXTAUTH_URL: "http://localhost:3000"
-      SKIP_ENV_VALIDATION: "true"
-      NODE_ENV: "test"
+      DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/toutspecial?schema=toutspecial'
+      NEXTAUTH_SECRET: 'test-secret-key'
+      NEXTAUTH_URL: 'http://localhost:3000'
+      SKIP_ENV_VALIDATION: 'true'
+      NODE_ENV: 'test'
 
     services:
       postgres:
@@ -61,7 +61,7 @@ jobs:
       - name: Build project
         run: npm run build
         env:
-          SKIP_ENV_VALIDATION: "true"
+          SKIP_ENV_VALIDATION: 'true'
 
   deploy:
     needs: test-and-build
