--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "regions": ["gru1"],
+  "git": {
+    "deploymentEnabled": {
+      "main": true,
+      "develop": false
+    }
+  },
   "env": {
     "NEXT_PUBLIC_API_URL": "https://toutspecial.vercel.app",
     "NEXT_PUBLIC_SENTRY_DSN": "@sentry-dsn",
